# tass

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  CHANGELOG.md  DEPLOY_CLOUD.md  Dockerfile  LICENSE  PROJECT_SPEC.md  Procfile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
agents/: 00_cto_planner.md  01_rule_designer.md  02_math_spec_writer.md  03_python_implementer.md  04_backtest_analyst.md  05_reviewer_qa.md  README.md
alembic/: env.py
api/: __init__.py  app.py  deps.py
backend/: README.md
backtest/: README.md
config/: README.md  app_settings.py  backtest_v1.yaml  chart_criteria_v1.yaml  confidence_v1.yaml  gate_pipeline_v1.yaml  mvp_operational_rules.yaml  probability_v1.yaml  recommendation_full_v1.yaml  recommendation_v1.yaml  risk_v1.yaml  settings.yaml  settings_full.yaml  universe_kosdaq_backtest.csv  universe_kospi_backtest.csv  universe_krx_backtest.csv  universe_krx_generated.csv  universe_sample.csv
database/: README.md
docs/: DEVELOPMENT_ROADMAP.md  DOCUMENTATION_STRUCTURE.md  README.md  TASS-001_Ideal_Candidate_Definition.md  TASS-002_Data_Specification.md  TASS-003_System_Architecture.md  TASS-004_Rule_Framework.md  TASS-005_Scoring_Framework.md  TASS-006_Gate_Framework.md  TASS-007_Confidence_Framework.md  TASS-008_Risk_Management_Framework.md  TASS-009_Backtest_Framework.md  TASS-010_Trend_Framework.md  TASS-011_Rule_Taxonomy_Specification.md  TASS-012_Rule_Specification_Standard.md  TASS-013_Rule_Database_Specification.md  TASS-014_TR_Rule_Catalog_v1.0.md  TASS-015_MA_Rule_Catalog_v1.0.md  TASS-016_PA_Rule_Catalog_v1.0.md  TASS-017_MO_Rule_Catalog_v1.0.md  TASS-017_VL_Rule_Catalog_v1.0.md  TASS-018_VO_Rule_Catalog_v1.0.md  TASS-019_MS_Rule_Catalog_v1.0.md  TASS-019_SR_Rule_Catalog_v1.0.md  TASS-020_BO_Rule_Catalog_v1.0.md  TASS-020_PB_Rule_Catalog_v1.0.md  TASS-020_PT_Rule_Catalog_v1.0.md  TASS-021_CS_Rule_Catalog_v1.0.md  (+14 more)
(+3087 files in other folders)
